--- a/west-side-soul/005 - Hotel California.html
+++ b/west-side-soul/005 - Hotel California.html
@@ -17,10 +17,10 @@
 [F#]I had to stop for the night.
 </verse>
 
-<verse>
+<verse full-lines>
 [Bm]There she stood in the doorway; [F#]I heard the mission bell
 [A]And I was thinking to myself 'This could be [E]heaven
-[]or this could be Hell'
+or this could be Hell'
 [G]Then she lit up a candle [D]and she showed me the way
 [Em]There were voices down the corridor, [F#]I thought I heard them say
 </verse>
