--- a/west-side-soul/027 - Iris.html
+++ b/west-side-soul/027 - Iris.html
@@ -5,6 +5,8 @@
 <title>Iris</title>
 <meta name="artist" value="Goo Goo Dolls">
 <meta name="songid" value="27">
+<meta name="source" value="https://tabs.ultimate-guitar.com/g/goo_goo_dolls/iris_ver7_crd.htm">
+<!-- XXX check chords - what is Asus? -->
 </head>
 <body>
 
