--- a/west-side-soul/034 - Big Rock Candy Mountain.html
+++ b/west-side-soul/034 - Big Rock Candy Mountain.html
@@ -14,11 +14,11 @@
 <verse two-line>
         G
 One evening as the sun went down
-         D                 G
+         C                 G
 And the jungle fires were burning,
           G
 Down the track came a hobo hiking,
-        D                     G
+        C                     G
 And he said, "Boys, I'm not turning
       C           G           C    G
 I'm headed for a land that's far away
@@ -104,6 +104,9 @@ I'll see you all this coming fall
 In the Big Rock Candy Mountains
 </verse>
 </div>
+<!--
+<object data="images/034/1.svg" width="909" height="300" type="image/svg+xml"/>
+-->
 
 </body>
 </html>
