--- a/west-side-soul/038 - If I Had a Hammer.html
+++ b/west-side-soul/038 - If I Had a Hammer.html
@@ -19,7 +19,7 @@ I'd hammer in the morning,
 I'd hammer in the evening,
               E7
 All over this land,
-                A   -A7
+                A     A7
 I'd hammer out danger, 
                  D       D7
 I'd hammer out a warning,
@@ -27,10 +27,12 @@ I'd hammer out a warning,
 I'd hammer out the love between
    D               A
 My brothers and my sisters
-D-A-E7        A      E7
-All over this land.  Oh, oh . . .
+D  A   E7        A      E7
+All    over this land.  Oh, oh . . .
 </verse>
+<!-- XXX check D A E7 chords -->
 
+<br/>
 <verse>
 If I had a bell
 I'd ring it in the morning
@@ -45,7 +47,7 @@ All over this land, oh
 </verse>
 
 <verse>
-[]If I had a song
+If I had a song
 I'd sing it in the morning
 I'd sing it in the evening
 All over this land
