--- a/west-side-soul/042 - Send Me On My Way.html
+++ b/west-side-soul/042 - Send Me On My Way.html
@@ -41,7 +41,7 @@ how we will crawl
 C, C, F, F, C, C, F, F
 Send me on my way..
 (On my way)
-[Repeat x8]
+(Repeat x8)
 </verse>
 
 <h3>BRIDGE</h3>
@@ -55,7 +55,7 @@ C              G
 Send me on my way-ay-ay-ay-ay-ay-ay
 </verse>
 
-<p><i>Repeat Verse 1</i>
+<p><i>(Repeat Verse 1)</i>
 
 </body>
 </html>
