--- a/west-side-soul/046 - Bridge Over Trouble Water.html
+++ b/west-side-soul/046 - Bridge Over Trouble Water.html
@@ -5,13 +5,14 @@
 <title>Bridge Over Troubled Water</title>
 <meta name="artist" value="Simon and Garfunkel">
 <meta name="songid" value="46">
+<!-- XXX check chords, esp. G D G D -->
 </head>
 <body>
 
 <verse>
 When you're [D]weary, [G] feeling [D]small  [G]
 When [C]tears [G]are [D]in your e[Em]yes
-I will d[D]ry them all [G D G D](all)
+I will d[D]ry them all [G    D    G    D](all)
 [D]I'm [A]on [G]your [A]side, o[A7]h, when times get ro[D]ugh
 [D]And [D/E]friends [D/F#]just c[G]an't b[E]e fo[A]und
 </verse>
