--- a/west-side-soul/A01 - Down by the Bay.html
+++ b/west-side-soul/A01 - Down by the Bay.html
@@ -7,11 +7,11 @@
 <meta name="songid" value="A01">
 </head>
 <body>
-<verse>
+<verse full-lines>
 Down by the [C]bay where the watermelons [G7]grow 
 Back to my [G7]home I dare not [C]go 
 For if I [F]do my mother will [C]say,
-[]"Did you ever see a goose kissing a moose?" 
+"Did you ever see a goose kissing a moose?" 
 [G7]Down by the [C]bay
 </verse>
 
