--- a/west-side-soul/A06 - Let It Be.html
+++ b/west-side-soul/A06 - Let It Be.html
@@ -6,39 +6,46 @@
 <meta name="artist" value="The Beatles">
 <meta name="source" value="https://tabs.ultimate-guitar.com/t/the_beatles/let_it_be_ver6_crd.htm">
 <meta name="songid" value="A06">
+<style>
+h3 {
+  margin-bottom: 0;
+}
+h3 + .lyrics {
+  margin-top: 0;
+}
+</style>
 </head>
 <body>
 
 <verse two-line>
        C              G                Am          Fmaj7    F6
-When I find myself in times of trouble mother Mary comes to me
-C                 G            | F   C/E G/D | C |
+When I find myself in times of trouble Mother Mary comes to me
+C                 G             F   C/E    G/D    C 
 Speaking words of wisdom let it be
     C             G               Am                Fmaj7    F6
 And in my hour of darkness she is standing right in front of me
-C                 G            | F   C/E G/D | C |
+C                 G              F   C/E    G/D    C
 Speaking words of wisdom, let it be
 </verse>
 
 
 <h3>CHORUS</h3>
-
 <verse two-line>
        Am         G6         Fmaj7      C
 Let it be, let it be, let it be, let it be
-C                G            | F   C/E G/D | C |
+C                G              F   C/E    G/D    C 
 Whisper words of wisdom, let it be
 </verse>
 
-
-<verse two-line nochords>
+<br/>
+<verse two-line>
     C               G              Am            Fmaj7  F6
 And when the broken hearted people living in the world agree
-C                G            | F   C/E G/D | C |
+C                G              F   C/E    G/D    C 
 There will be an answer, let it be
-    C                  G               Am             Am/G Fmaj7     F6
-For though they may be parted there is still a chance that they will see
-C                G            | F   C/E G/D | C |
+    C                  G               Am             Am/G    Fmaj7     F6
+For though they may be parted there is still a chance that    they will see
+C                G              F   C/E    G/D    C
 There will be an answer, let it be
 </verse>
 
@@ -65,14 +72,14 @@ C                G            | F   C/E G/D | C |
 Whisper words of wisdom, let it be
 -->
 
-<verse two-line nochords>
+<verse two-line>
     C                 G                Am                 Fmaj7     F6
 And when the night is cloudy, there is still a light that shines on me
-C             G            | F   C/E G/D | C |
+C             G              F   C/E    G/D    C
 Shine until tomorrow, let it be
   C              G              Dm/A   Am   Fmaj7    F6
 I wake up to the sound of music mother Mary comes to me
-C                 G            | F   C/E G/D | C |
+C                 G              F   C/E    G/D    C
 Speaking words of wisdom, let it be
 </verse>
 
