--- a/west-side-soul/index.html
+++ b/west-side-soul/index.html
@@ -1,247 +1,22 @@
 <html>
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-<script src="contents.js" type="text/javascript"></script>
-<script src="songs.js" type="text/javascript"></script>
-<style>
-@page {
-  width: 8.5in;
-  height: 11in;
-  margin-top: 0.25in;
-}
-
-@page :right {
-  margin-left: 0.75in;
-  margin-right: 0.25in;
-}
-
-@page :left {
-  margin-right: 0.75in;
-  margin-left: 0.25in;
-}
-
-@page :first {
-  page-break-before: left;
-}
-
-.title-page:after {
-  display: block;
-  content: "\A0";
-  page-break-before: always;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  line-height: 1.3;
-}
-a, a:visited, a:hover, a:active {
-  color: blue;
-}
-.songid {
-  display: inline-block;
-  text-align: right;
-  width: 2em;
-  padding-right: 1em;
-  vertical-align: text-top;
-  font-family: 'Roboto', "Times New Roman";
-  font-size: 11pt;
-}
-.songid::after {
-  content: ".";
-}
-.title {
-  display: inline-block;
-  width: 3.7in;
-  vertical-align: text-top;
-  font-family: 'Roboto', "Times New Roman";
-  font-size: 11pt;
-}
-.artist {
-  vertical-align: text-top;
-  font-family: 'Roboto', "Times New Roman";
-  font-size: 11pt;
-}
-body {
-  font-family: 'Roboto', "Times New Roman";
-  font-size: 11pt;
-}
-h1 {
-  text-align: center;
-  font-size: 36pt;
-}
-h2 {
-  text-align: center;
-  text-decoration: underline;
-}
-h3 {
-  font-size: 12pt;
-  text-decoration: underline;
-}
-</style>
+<script src="files.js" type="text/javascript"></script>
 </head>
 <body>
-
-<h1>West Side Soul</h1>
-<h2>Table of Contents</h2>
-<h3>Our Songs</h3>
-
-<contents>
-1. REVIVAL FOR WANDERERS - Pete Jensen
-2. DESTINY IN THE WIND - Pete Jensen
-3. FOR PETE'S SAKE - The Mandos
-</contents>
-
-<h3>Traditional y / Classic Songs</h3>
-
-<contents>
-4. WAGON WHEEL - Old Crow Medicine Show
-5. HOTEL CALIFORNIA - The Eagles
-6. THE WEIGHT - Jaime Robbie Robertson AND The Band
-7. OLD DAN TUCKER - Bruce Springsteen
-8. TAKE ME HOME COUNTRY ROADS - John Denver
-9. MAN OF CONSTANT SORROW - Soggy Bottom Boys
-10. LOCH LOMOND - Irish Folk song
-11. GALWAY GIRL - Steve Earle/Sharon Shannon
-12. DOWN TO THE RIVER TO PRAY - Alison Krauss
-13. BLIND MAN - Tim Long
-14. MISS OHIO - Gillian Welch
-15. POISON AND WINE - The Civil Wars
-16. ALL STAR - Smashmouth
-17. LOUIE LOUIE (OH BABY) - The Kingsmen
-18. LOVE POTION #9 - The Searchers
-19. HEY HEY WE'RE THE MONKEES - The Monkees
-20. SUMMER OF '69 - Bryan Adams
-21. TIME OF YOUR LIFE (GOOD RIDDANCE) - Green Day
-22. WONDERWALL - Oasis
-23. BAD, BAD LEROY BROWN - Jim Croce
-24. CAT'S IN THE CRADLE - Harry Chapin
-25. DROPS OF JUPITER - Train
-26. HANG ON SLOOPY - The McCoys
-27. IRIS - Goo Doo Dolls
-28. JOHNNY B. GOODE - Chuck Berry
-29. I WILL SURVIVE - Freddie Perren and Dino Fekaris
-30. FOR WHAT IT'S WORTH - Buffalo Springfield
-31a. HO HEY - The Lumineers
-31. IF I EVER LEAVE THIS WORLD ALIVE - Flogging Molly
-32. THIS LITTLE LIGHT OF MINE - Traditional
-33. SOMEWHERE OVER THE RAINBOW - Judy Garland
-34. BIG ROCK CANDY MOUNTAIN - Harry McClintock
-35. I'LL FLY AWAY - Traditional
-36. PIANO MAN - Billy Joel
-37. TENNESSEE WALTZ - Miscellaneous Country
-38. IF I HAD A HAMMER - Peter Paul and Mary
-39. RING OF FIRE - Johnny Cash
-40. FOLSOM PRISON BLUES - Johnny Cash
-41. I JUST CALLED TO SAY I LOVE YOU - Stevie Wonder
-42. SEND ME ON MY WAY - Rusted Root
-43. ALL YOU NEED IS LOVE - Beatles
-44. CECILIA - Simon and Garfunkel
-45. HOMEWARD BOUND - Simon and Garfunkel
-46. BRIDGE OVER TROUBLED WATER - Simon and Garfunkel
-47. TURN, TURN, TURN - The Byrds
-48. STAND BY ME - Ben E. King
-49. HOUSE OF THE RISING SUN - Animals
-50. I WANT TO HOLD YOUR HAND - Beatles
-51. HIT THE ROAD JACK - Ray Charles
-52. I FEEL GOOD - James Brown
-53. DANCING QUEEN - ABBA
-54. MAN IN THE MIRROR - Michael Jackson
-55. DON'T STOP BELIEVING - Journey
-56. WALK ON THE WILD SIDE - Lou Reed
-57. WALK LIKE AN EGYPTIAN - The Bangles
-58. FREE FALLIN'- Tom Petty
-59. BUST A MOVE - Young MC
-60. NO WOMAN NO CRY - Bob Marley
-61. JOY TO THE WORLD - Three Dog Night
-62. CRAZY LITTLE THING CALLED LOVE - Queen
-63. BORN TO BE WILD - Steppenwolf
-64. SWEET HOME ALABAMA - Lynyrd Skynyrd
-65. BROWN EYED GIRL - Van Morrison
-66. LEAN ON ME - Bill Withers
-67. LION SLEEPS TONIGHT - The Tokens
-68. IF I HAD A MILLION DOLLARS - Steven Page and Ed Robertson
-</contents>
-
-<h3>International</h3>
-
-<contents>
-69. CIELITO LINDO (SPANISH) - Traditional
-70. VIVIR MI VIDA (SPANISH) - Marc Anthony
-71. LA CAMISSA NEGRA (SPANISH) - Juanes
-72. LA BAMBA (SPANISH) - Ritchie Valens
-73. CHAMPS ELYSEES (FRENCH) - Joe Dassin
-74. LA VIE EN ROSE - Edith Piaf
-</contents>
-
-<h3>Disney / Pixar Songs</h3>
-
-<contents>
-75. YOU'VE GOT A FRIEND IN ME - Toy Story / Randy Newman
-76. I'LL MAKE A MAN OUT OF YOU - Mulan 
-77. CIRCLE OF LIFE - The Lion King / Elton John
-78. CAN YOU FEEL THE LOVE TONIGHT - The Lion King / Elton John
-79. A WHOLE NEW WORLD - Aladdin
-80. SUPERCALIFRAGILISTICEXPIALIDOCIOUS - Mary Poppins / Andrews &amp; Van Dyck
-81. HAKUNA MATATA - The Lion King
-82. LOVE IS AN OPEN DOOR - Frozen
-83. YOU'LL BE IN MY HEART - Tarzan / Phil Collins
-</contents>
-
-<h3>Contemporary-ish Songs</h3>
-
-<contents>
-84. THINKING OUT LOUD - Ed Sheeran
-85. COUNTING STARS - One Republic
-86. HO HEY - Lumineers
-87. WANNABE - Spice Girls
-88. LOSE YOURSELF - Eminem
-89. WE ARE ONE - Pitbull - FIFA World cup song 2014
-90. SEMI-CHARMED KIND OF LIFE - Third Eye Blind
-100. FLY ME TO THE MOON - Frank Sinatra
-101. CAN'T HELP FALLING IN LOVE WITH YOU - Elive Presley
-102. HEY SOUL SISTER - Train
-103. SWEET CAROLINE - Neal Diamond
-104. SWEET HOME ALABAMA - Lynyrd Skynyrd
-105. THE FINAL COUNTDOWN - Europe
-106. EYE OF THE TIGER - Survivor
-107. FIREFLIES - Owl CIty
-108. REPLAY - Iyaz
-109. I HAVE A DREAM - ABBA
-110. DANCE TO THE MUSIC - Sly and the Family Stone
-111. PLAY THAT FUNKY MUSIC - Wild Cherry
-112. SON OF A PREACHER MAN - Dusty Springfield
-113. PEACE TRAIN - Cat Stevens
-114. DON'T WORRY BE HAPPY - Bob Marley
-115. BEST DAY OF MY LIFE - American Authors
-116. HAPPY - Pharrell Williams
-117. 500 MILES - Proclaimers
-118. YOU GOTTA BE - Des'ree
-119. FIGHT SONG - Rachel Platten
-120. DANCING IN THE STREET - Martha and the Vandellas
-121. GERONIMO - Sheppard
-122. AIN'T NO MOUNTAIN HIGH ENOUGH - Marvin Gaye
-123. SITTING ON THE DOCK OF THE BAY - Otis Redding
-124. SEE YOU AGAIN - wiz khalifa ft. Charlie Puth
-125. STRAWBERRY WINE - Deanna Carter
-126. RESPECT - Aretha Franklin
-127. JUST A DREAM - Neyo
-128. UNDER THE SEA - From the Little Mermaid
-129. LET IT GO - Idina Menzel
-130. THE FRESH PRINCE OF BEL AIR THEME SONG - Will Smith
-131. QUERIDA - Juan Gabriel
-132. LAS GOLONDRINAS - Pedro Infante
-133. LOVE YOURSELF - Justin Bieber
-134. RIVERS AND ROADS - The Head and the Heart
-135. MY FAVORITE THINGS - Sound of Music
-136. BAD DAY - Daniel Powter
-137. KEEP YOUR HEART YOUNG - Brandi Carlile
-</contents>
-
-<h3>2017</h3>
-<contents prefix="A">
-</contents>
-
+<h3>HTML Files</h3>
+<div id="xxx">
+</div>
+This is after the div.
 </body>
+<script>
+var ul = document.createElement("ul")
+for (var i = 0; i < files.length; i++) {
+  var li = document.createElement("li")
+  var path = files[i]
+  li.innerHTML = '<a href="' + path + '">' + path + "</a>"
+  ul.appendChild(li)
+}
+var xxx = document.getElementById("xxx")
+xxx.appendChild(ul)
+</script>
 </html>
