--- a/daily-programmer/327/verify.html
+++ b/daily-programmer/327/verify.html
@@ -18,6 +18,7 @@ textarea { font-family: monospace; font-size: 12pt; }
       <button id="check_one_btn">Check Word</button>
       <input id="cover_solution" type=text width=24 readonly>
       <p>Blocks: <span id="block_count"></span><br/>
+      <textarea id="solution" rows="24" cols="1"></textarea>
       <textarea id="blocks" rows="24" cols=24"></textarea>
       <textarea id="report" rows="24" cols=30"></textarea>
     </div>
