--- a/daily-programmer/326/verify.html
+++ b/daily-programmer/326/verify.html
@@ -9,7 +9,7 @@ textarea { font-family: monospace; font-size: 12pt; }
 </style>
 </head>
   <body>
-    <h2>Challenge #327 &mdash; Multifaceted Alpha Blocks Checker</h2>
+    <h2><a href="https://www.reddit.com/r/dailyprogrammer/comments/6t0zua/20170811_challenge_326_hard_multifaceted_alphabet/">Challenge #326 &mdash; Multifaceted Alphabet Blocks Checker</a></h2>
     <div id=main>
       <p>Words Loaded: <span id="word_count">Not Loaded</span>
       <button id="check_all_btn">Check All Words</button>
