--- a/daily-programmer/326/verify.html
+++ b/daily-programmer/326/verify.html
@@ -11,6 +11,8 @@ textarea { font-family: monospace; font-size: 12pt; }
   <body>
     <h2><a href="https://www.reddit.com/r/dailyprogrammer/comments/6t0zua/20170811_challenge_326_hard_multifaceted_alphabet/">Challenge #326 &mdash; Multifaceted Alphabet Blocks Checker</a></h2>
     <div id=main>
+      <p>Words URL: <input id="words_url" type="text" value="" width="30">
+      <button id="load_words_btn">Load Words</button>
       <p>Words Loaded: <span id="word_count">Not Loaded</span>
       <button id="check_all_btn">Check All Words</button>
       <span id="check_status"></span>
