--- a/daily-programmer/342-easy/main4.html
+++ b/daily-programmer/342-easy/main4.html
@@ -3,7 +3,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <style>
 table { border-collapse: collapse; }
-td { text-align: right; }
+td { text-align: right; vertical-align: text-bottom; }
 .bop { padding-left: 3px; padding-right: 3px; }
 .tdop { text-align: center; padding-left: 4px; }
 .tdmul { color: red; border-style: solid; border-width: 0 0 2px 0; }
