--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
   <li> <a href="./haddock-index-demo/doc-index-All.html">ghc-api-7.10.2</a>
   </ul>
 </ul>
+  <a href="hb.html">hb.html</a>
 </body>
 </html>
