--- a/arrows/arrow.html
+++ b/arrows/arrow.html
@@ -44,6 +44,9 @@
                 border: 1px solid black;
                 padding: 5px 5px;
             }
+            .wrapper {
+                line-height: 1.5em;
+            }
         </style>
     </head>
     
