--- a/arrows/index.html
+++ b/arrows/index.html
@@ -4,6 +4,17 @@
             li {
                 line-height: 2.5em;
             }
+            body {
+                margin: 40px;
+                font-family: sans-serif;
+            }
+            a, a:visited, a:active {
+                text-decoration: none;
+                color: inherit;
+            }
+            a:hover {
+                text-decoration: underline;
+            }
         </style>
     </head>
     <body>
@@ -16,6 +27,11 @@
                 <a href="compare.html">RK4 vs. Simple Simulation Comparison</a>
             </li>
             <li><a href="crossbow-calculator.html">Bestcrossbowsource.com Calculator</a></li>
+        </ul>
+        <h2>Papers</h2>
+        <ul>
+            <li><a href="Exterior Ballistics of Bows and Arrows.pdf">
+                Exterior Ballistics of Bows and Arrows - W. J. Rheingans</a></li>
         </ul>
     </body>
 </html>
