--- a/arrows/index.html
+++ b/arrows/index.html
@@ -21,7 +21,7 @@
         <h2>Arrow Ballistics Calculators</h2>
         <ul>
             <li>
-                <a href="arrow.html">RK4 Ballisitc Simulation</a>
+                <a href="arrow.html">RK4 Ballistic Simulation</a>
             </li>
             <li>
                 <a href="compare.html">RK4 vs. Simple Simulation Comparison</a>
