--- a/arrows/arrow.html
+++ b/arrows/arrow.html
@@ -56,7 +56,7 @@
                 <h3>Arrow Trajectory Calculator</h2>
                 <form id="trajectory-form" autocomplete="off">
 
-                    <label for="Drag Coeff. K">Drag Coeff:</label>
+                    <label for="Drag Coeff. K">Drag Coeff. K:</label>
                     <input id="drag" size="10" required pattern="\d*[.]?\d*(e-?\d+)?"> lb/ft<br>
 
                     <label for="weight">Arrow Weight</label>
